trunk/Archive2/ec/085cbb46f87159/output
main.cpp:33:22: error: exception of type const boost::coroutines::detail::forced_unwind & will be caught by earlier handler [-Werror]
        catch (const boost::coroutines::detail::forced_unwind &e) {
                     ^
main.cpp:30:16: note: for type const boost::coroutines::detail::forced_unwind &
        catch (boost::coroutines::detail::forced_unwind const &e) {
               ^
1 error generated.
